<resources>
    <string name="buttonUpdateDb">Обновить базу лекарств и аналогов</string>
    <string name="buttonSendRequest">Оставить заявку</string>
    <string name="buttonAddAnalog">Добавить новый аналог к лекарству</string>
    <string name="buttonComparePrices">Сравнить цены</string>
    <string name="buttonAnnotation">Аннотация</string>
    <string name="buttonClose">Закрыть</string>
    <string name="buttonContinue">Продолжить</string>
    <string name="buttonReturn">Вернуться</string>
    <string name="buttonYes">Да</string>
    <string name="buttonNo">Нет</string>

    <string name="textAppName">CheapMedicine Free</string>
    <string-array name="textMainMenuItems">
        <item>Лекарства и аналоги</item>
        <item>Сканировать штрих-код</item>
        <item>Заявка на поиск аналога</item>
        <item>Предложить аналог</item>
        <item>Справка</item>
        <item>Выход</item>
    </string-array>
    <string name="textDrugNameUnderline"><u>Препарат</u>:</string>
    <string name="textAnalogNameUnderline"><u>Аналоги и похожие лекарства</u>:</string>
    <string name="textDrugName">Препарат:</string>
    <string name="textAnalogs">Аналоги:</string>
    <string name="textDatabaseVersionInfo">Информация о базе лекарств</string>
    <string name="textAnalog">Аналог:</string>
    <string name="textChooseDrugstore">Выберите аптеку</string>
    <string name="textDatabaseVersion">Версия базы: </string>
    <string name="textDrugsCount">Общее количество лекарств: </string>
    <string name="textDrugstoresCount">Сервисов для сравнения цен: </string>
    <string name="textDrugSearch">\tВведите первые буквы названия препарата или выберите из списка</string>
    <string name="textActiveSubstanceFilter">Фильтр по действующему веществу</string>
    <string name="textUpdateDb">Обновить базу данных</string>
    <string name="textCreateRequestForAnalog">
        \tЕсли вы не нашли нужного Вам препарата в базе, то Вы можете оставить заявку на поиск
        аналога к лекарству. Все найденные лекарства и их аналоги после проверки добавляются
        в новую версию базы данных. Следите за обновлениями!
    </string>
    <string name="textHelpWithAnalog">
        \tВы можете помочь другим с поиском аналогов лекарств или добавить новую пару
        лекарство-аналог. Все найденные лекарства и их аналоги после проверки добавляются
        в новую версию базы данных. Следите за обновлениями!
    </string>
    <string name="textComparePrices">
        Чтобы посмотреть инструкцию к применению для лекарства щёлкните на его названии.
        &lt;br&gt;
        Для сравнения цен, выберите аптеку или сеть аптек. Далее нажмите
        кнопку  &lt;b&gt;\"Сравнить цены\"&lt;/b&gt;(нужен интернет).
         &lt;br&gt;
    </string>
    <string name="textUsersWarning">
        \tИнформация о лекарствах, предоставленная в данном приложении, носит исключительно ОЗНАКОМИТЕЛЬНЫЙ характер и не является руководством к лечению. Используйте 	незнакомые Вам препараты только после консультации с лечащим врачом!
    </string>
    <string name="textCopyright">Copyright © Konstantin Chervyakov 2016 All rights reserved</string>
    <string name="textNoData">н/д</string>
    <string name="textMainMenuItemPicDescr">MainMenuItemPic</string>
    <string name="textAppFullName">Дешёвая медицина:\nнедорогие аналоги лекарств</string>
    <string name="textDrugstoreSite">Веб-сайт:</string>
    <string name="textDrugstorePhone">Телефоны:</string>
    <string name="textDrugstoreCity">Местоположение:</string>
    <string name="textDrugstoreContacts">Контактная информация</string>
    <string name="textAreYouSureToClose">Вы уверены, что хотите выйти?</string>
    <string name="textHelpWithReadingBarcode">Направьте объектив камеры Вашего телефона так, чтобы штрих-код оказался внутри прямоугольника видоискателя</string>
    <string name="textNotFoundByBarcode">Лекарство с таким штрих-кодом не найдено в базе. Оставить заявку на поиск аналога к этому препарату?</string>
    <string name="textBarcodeDemoVersionPart1">В бесплатной <b>Free</b> версии приложения поиск лекарств по штрих-коду работает в ограниченном режиме! Вы можете воспользоваться этой функцией </string>
    <string name="textBarcodeDemoVersionPart2"> раз.\nДля использования поиска лекарств по штрих-коду без ограничений установите <b>Pro</b> версию приложения.</string>
    <string name="textFarmgroupActiveSubstanceAnalog">(действующее вещество, показания)</string>
    <string name="textFarmgroupAnalog">(показания)</string>
    <string name="textDrugSearhFieldTip">Поиск препарата</string>

    <string name="messageUpdateSuccess">Обновление базы лекарств успешно завершено! </string>
    <string name="messageNoUpdates">Новых обновлений нет</string>
    <string name="messageRequestAccepted">Ваша заявка принята</string>
    <string name="messageNoData">
        нет данных
    </string>
    <string name="messageConnectionInitializationException">The field \'connection\' is not null</string>
    <string name="messageConnectionNullPointerException">Connection was not initialised</string>

    <string name="errorOpenDbFatal">
        При загрузке базы данных произошла фатальная ошибка. Пожалуйста, попробуйте ещё раз или переустановите приложение.
    </string>
    <string name="errorRequestSendingError">При обработке произошла ошибка. Скорее всего, отсутствует доступ к сети Интернет. Пожалуйста,
        проверьте наличие соединения и попробуйте ещё раз
    </string>
    <string name="errorAppFatalError">Произошла фатальная ошибка. Пожалуйста, попробуйте ещё раз или переустановите приложение.
    </string>
    <string name="errorUpdatingDatabase">Ошибка при обновлении! Изменения в базу не внесены</string>

    <string name="nameAppActionBarItemSearch">Поиск</string>
    <string name="nameSplashImage">splash_logo</string>
    <string name="valueRemoteServer">http://www.kpch.ru/app1/</string>
    <string name="valueCurrencyUnit"> p</string>

</resources>
