<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/cm1_border_field">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/rl_title"
        android:foregroundGravity="center_vertical">

        <ImageView
            android:layout_width="40px"
            android:layout_height="40px"
            android:id="@+id/imageView"
            android:src="@drawable/info_aptek_title" />

        <TextView
            android:id="@+id/tv_windowDrugstoreInfoTitle"
            style="@style/actionBar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/textDrugstoreContacts" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_content"
        android:layout_below="@+id/rl_title"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_drugstoreName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:paddingBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDrugstoreCity"
            android:id="@+id/tv_drugstoreCity"
            android:layout_below="@+id/tv_drugstoreName"
            android:paddingLeft="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_drugstoreCity"
            android:layout_toRightOf="@+id/tv_drugstoreCity"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/tv_drugstoreName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDrugstoreSite"
            android:id="@+id/tv_drugstoreSite"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/field_drugstoreCity"
            android:paddingLeft="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDrugstorePhone"
            android:id="@+id/tv_drugstorePhone"
            android:layout_below="@+id/field_drugStoreSite"
            android:layout_alignParentLeft="true"
            android:paddingLeft="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_drugStoreSite"
            android:layout_alignParentTop="false"
            android:layout_toRightOf="@+id/tv_drugstoreSite"
            android:autoLink="web"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/field_drugstoreCity" />

        <TextView
            android:id="@+id/field_drugstorePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_drugStoreSite"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv_drugstorePhone"
            android:autoLink="phone" />
    </RelativeLayout>

</RelativeLayout>