<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.kpch.cheapmedicine.view_controller.MainActivity"
    style="@style/cm1_layouts">

    <ListView
        android:id="@+id/lv_mainMenuItemsList"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_above="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:divider="#ffffff"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:textFilterEnabled="false" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:measureWithLargestChild="false"
        android:id="@+id/tableLayout"
        android:background="@drawable/cm1_border_field"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/tv_infoAboutDrugs"
                style="@style/s_add_analogNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textDatabaseVersionInfo"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_drugsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:text="@string/textDrugsCount"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_drugsCountField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textSize="13sp" />
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_drugstoresCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/textDrugstoresCount"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_drugstoresCountField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text=""
                    android:textSize="13sp" />
            </TableRow>

        </TableRow>

        <Button
            android:id="@+id/b_updateDatabase"
            style="@style/cm_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:allowUndo="false"
            android:onClick="onClickUpdateDB"
            android:text="@string/buttonUpdateDb" />

    </TableLayout>

    <ProgressBar
        android:id="@+id/progBar_databaseUpdating"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

</RelativeLayout>
